package test

import (
	"context"
	"strings"
	structurepb "structure-service/api/proto"
	"structure-service/internal/domain"
	"structure-service/internal/infrastructure/grpc"
	"structure-service/internal/usecase"
	"testing"

	"github.com/leanovate/gopter"
	"github.com/leanovate/gopter/prop"
)

// **Feature: gateway-grpc-implementation, Property 1: HTTP-to-gRPC Routing Correctness (Structure endpoints)**
// **Validates: Requirements 5.1-5.5**

// MockStructureRepository provides a minimal implementation for testing
type MockStructureRepository struct{}

func (m *MockStructureRepository) GetAllUniversities() ([]*domain.University, error) {
	return []*domain.University{}, nil
}

func (m *MockStructureRepository) GetAllUniversitiesWithSortingAndSearch(limit, offset int, sortBy, sortOrder, search string) ([]*domain.University, int, error) {
	return []*domain.University{}, 0, nil
}

func (m *MockStructureRepository) GetUniversityByID(id int64) (*domain.University, error) {
	if id <= 0 {
		return nil, domain.ErrUniversityNotFound
	}
	return &domain.University{ID: id, Name: "Test University"}, nil
}

func (m *MockStructureRepository) GetUniversityByINN(inn string) (*domain.University, error) {
	if inn == "" {
		return nil, domain.ErrUniversityNotFound
	}
	return &domain.University{ID: 1, Name: "Test University", INN: inn}, nil
}

func (m *MockStructureRepository) CreateUniversity(u *domain.University) error {
	if u.Name == "" || u.INN == "" {
		return domain.ErrInvalidInput
	}
	u.ID = 1
	return nil
}

func (m *MockStructureRepository) UpdateUniversity(u *domain.University) error {
	if u.ID <= 0 {
		return domain.ErrUniversityNotFound
	}
	return nil
}

func (m *MockStructureRepository) DeleteUniversity(id int64) error {
	if id <= 0 {
		return domain.ErrUniversityNotFound
	}
	return nil
}

func (m *MockStructureRepository) GetBranchByID(id int64) (*domain.Branch, error) {
	if id <= 0 {
		return nil, domain.ErrBranchNotFound
	}
	return &domain.Branch{ID: id, Name: "Test Branch"}, nil
}

func (m *MockStructureRepository) GetFacultyByID(id int64) (*domain.Faculty, error) {
	if id <= 0 {
		return nil, domain.ErrFacultyNotFound
	}
	return &domain.Faculty{ID: id, Name: "Test Faculty"}, nil
}

func (m *MockStructureRepository) GetGroupByID(id int64) (*domain.Group, error) {
	if id <= 0 {
		return nil, domain.ErrGroupNotFound
	}
	return &domain.Group{ID: id, Number: "Test-1", Course: 1}, nil
}

func (m *MockStructureRepository) UpdateGroup(g *domain.Group) error {
	if g.ID <= 0 {
		return domain.ErrGroupNotFound
	}
	return nil
}

// Implement other required methods with minimal functionality
func (m *MockStructureRepository) CreateBranch(b *domain.Branch) error { return nil }
func (m *MockStructureRepository) UpdateBranch(b *domain.Branch) error { return nil }
func (m *MockStructureRepository) DeleteBranch(id int64) error { return nil }
func (m *MockStructureRepository) CreateFaculty(f *domain.Faculty) error { return nil }
func (m *MockStructureRepository) UpdateFaculty(f *domain.Faculty) error { return nil }
func (m *MockStructureRepository) DeleteFaculty(id int64) error { return nil }
func (m *MockStructureRepository) CreateGroup(g *domain.Group) error { return nil }
func (m *MockStructureRepository) DeleteGroup(id int64) error { return nil }
func (m *MockStructureRepository) GetStructureByUniversityID(id int64) (*domain.StructureNode, error) { return nil, nil }
func (m *MockStructureRepository) GetBranchesByUniversityID(id int64) ([]*domain.Branch, error) { return nil, nil }
func (m *MockStructureRepository) GetFacultiesByUniversityID(id int64) ([]*domain.Faculty, error) { return nil, nil }
func (m *MockStructureRepository) GetFacultiesByBranchID(id int64) ([]*domain.Faculty, error) { return nil, nil }
func (m *MockStructureRepository) GetGroupsByFacultyID(id int64) ([]*domain.Group, error) { return nil, nil }
func (m *MockStructureRepository) GetChatCountForBranch(id int64) (int, error) { return 0, nil }
func (m *MockStructureRepository) GetChatCountForFaculty(id int64) (int, error) { return 0, nil }
func (m *MockStructureRepository) GetChatCountForUniversity(id int64) (int, error) { return 0, nil }
func (m *MockStructureRepository) GetUniversityByINNAndKPP(inn, kpp string) (*domain.University, error) { return nil, domain.ErrUniversityNotFound }
func (m *MockStructureRepository) GetBranchByUniversityAndName(universityID int64, name string) (*domain.Branch, error) { return nil, domain.ErrBranchNotFound }
func (m *MockStructureRepository) GetFacultyByBranchAndName(branchID *int64, name string) (*domain.Faculty, error) { return nil, domain.ErrFacultyNotFound }
func (m *MockStructureRepository) GetGroupByFacultyAndNumber(facultyID int64, course int, number string) (*domain.Group, error) { return nil, domain.ErrGroupNotFound }

// MockDepartmentManagerRepository provides minimal implementation for testing
type MockDepartmentManagerRepository struct{}

func (m *MockDepartmentManagerRepository) CreateDepartmentManager(dm *domain.DepartmentManager) error {
	if dm.EmployeeID <= 0 {
		return domain.ErrInvalidInput
	}
	dm.ID = 1
	return nil
}

func (m *MockDepartmentManagerRepository) GetDepartmentManagerByID(id int64) (*domain.DepartmentManager, error) {
	if id <= 0 {
		return nil, domain.ErrDepartmentManagerNotFound
	}
	return &domain.DepartmentManager{ID: id, EmployeeID: 1}, nil
}

func (m *MockDepartmentManagerRepository) GetAllDepartmentManagers() ([]*domain.DepartmentManager, error) {
	return []*domain.DepartmentManager{}, nil
}

func (m *MockDepartmentManagerRepository) DeleteDepartmentManager(id int64) error {
	if id <= 0 {
		return domain.ErrDepartmentManagerNotFound
	}
	return nil
}

func (m *MockDepartmentManagerRepository) GetDepartmentManagersByEmployeeID(employeeID int64) ([]*domain.DepartmentManager, error) { return nil, nil }
func (m *MockDepartmentManagerRepository) GetDepartmentManagersByBranchID(branchID int64) ([]*domain.DepartmentManager, error) { return nil, nil }
func (m *MockDepartmentManagerRepository) GetDepartmentManagersByFacultyID(facultyID int64) ([]*domain.DepartmentManager, error) { return nil, nil }

func TestStructureGRPCRoutingCorrectness(t *testing.T) {
	// Create minimal services for testing
	mockRepo := &MockStructureRepository{}
	mockDMRepo := &MockDepartmentManagerRepository{}
	
	structureService := usecase.NewStructureService(mockRepo)
	
	// Create handler with minimal dependencies
	grpcHandler := grpc.NewStructureHandler(
		structureService,
		nil, // createStructureUseCase - not needed for basic routing tests
		nil, // getUniversityStructureUseCase - not needed for basic routing tests
		nil, // assignOperatorUseCase - not needed for basic routing tests
		nil, // importStructureUseCase - not needed for basic routing tests
		mockDMRepo,
	)

	properties := gopter.NewProperties(nil)

	// Property: Health method always returns healthy status
	properties.Property("Health method returns healthy status", prop.ForAll(
		func() bool {
			ctx := context.Background()
			resp, err := grpcHandler.Health(ctx, &structurepb.HealthRequest{})
			return err == nil && resp.Status == "healthy"
		},
	))

	// Property: GetAllUniversities method validates pagination parameters
	properties.Property("GetAllUniversities handles pagination correctly", prop.ForAll(
		func() bool {
			ctx := context.Background()
			req := &structurepb.GetAllUniversitiesRequest{
				Page:  0, // Invalid page
				Limit: 0, // Invalid limit
			}
			
			resp, err := grpcHandler.GetAllUniversities(ctx, req)
			
			// Should never return a gRPC error
			if err != nil {
				return false
			}
			
			// Should set default values for invalid pagination
			return resp.Page == 1 && resp.Limit == 50
		},
	))

	// Property: CreateUniversity validates required fields
	properties.Property("CreateUniversity validates required fields", prop.ForAll(
		func() bool {
			ctx := context.Background()
			req := &structurepb.CreateUniversityRequest{
				Name: "", // Empty name
				Inn:  "", // Empty INN
			}
			
			resp, err := grpcHandler.CreateUniversity(ctx, req)
			
			// Should never return a gRPC error
			if err != nil {
				return false
			}
			
			// Should return validation error for missing required fields
			return resp.Error != "" && strings.Contains(resp.Error, "invalid input")
		},
	))

	// Property: GetUniversityByID validates ID parameter
	properties.Property("GetUniversityByID validates ID parameter", prop.ForAll(
		func() bool {
			ctx := context.Background()
			req := &structurepb.GetUniversityByIDRequest{
				Id: 0, // Invalid ID
			}
			
			resp, err := grpcHandler.GetUniversityByID(ctx, req)
			
			// Should never return a gRPC error
			if err != nil {
				return false
			}
			
			// Should return error for invalid ID
			return resp.Error != "" && strings.Contains(resp.Error, "not found")
		},
	))

	// Property: GetUniversityByINN validates INN parameter
	properties.Property("GetUniversityByINN validates INN parameter", prop.ForAll(
		func() bool {
			ctx := context.Background()
			req := &structurepb.GetUniversityByINNRequest{
				Inn: "", // Empty INN
			}
			
			resp, err := grpcHandler.GetUniversityByINN(ctx, req)
			
			// Should never return a gRPC error
			if err != nil {
				return false
			}
			
			// Should return error for empty INN
			return resp.Error != "" && strings.Contains(resp.Error, "not found")
		},
	))

	// Property: UpdateBranchName validates branch ID
	properties.Property("UpdateBranchName validates branch ID", prop.ForAll(
		func() bool {
			ctx := context.Background()
			req := &structurepb.UpdateBranchNameRequest{
				BranchId: 0, // Invalid ID
				Name:     "New Name",
			}
			
			resp, err := grpcHandler.UpdateBranchName(ctx, req)
			
			// Should never return a gRPC error
			if err != nil {
				return false
			}
			
			// Should return error for invalid branch ID
			return resp.Error != "" && strings.Contains(resp.Error, "not found")
		},
	))

	// Property: UpdateFacultyName validates faculty ID
	properties.Property("UpdateFacultyName validates faculty ID", prop.ForAll(
		func() bool {
			ctx := context.Background()
			req := &structurepb.UpdateFacultyNameRequest{
				FacultyId: 0, // Invalid ID
				Name:      "New Name",
			}
			
			resp, err := grpcHandler.UpdateFacultyName(ctx, req)
			
			// Should never return a gRPC error
			if err != nil {
				return false
			}
			
			// Should return error for invalid faculty ID
			return resp.Error != "" && strings.Contains(resp.Error, "not found")
		},
	))

	// Property: GetAllDepartmentManagers handles pagination
	properties.Property("GetAllDepartmentManagers handles pagination", prop.ForAll(
		func() bool {
			ctx := context.Background()
			req := &structurepb.GetAllDepartmentManagersRequest{
				Page:  0, // Invalid page
				Limit: 0, // Invalid limit
			}
			
			resp, err := grpcHandler.GetAllDepartmentManagers(ctx, req)
			
			// Should never return a gRPC error
			if err != nil {
				return false
			}
			
			// Should set default values for invalid pagination
			return resp.Page == 1 && resp.Limit == 50
		},
	))

	// Property: CreateDepartmentManager validates user ID format
	properties.Property("CreateDepartmentManager validates user ID format", prop.ForAll(
		func() bool {
			ctx := context.Background()
			req := &structurepb.CreateDepartmentManagerRequest{
				UserId:       "invalid", // Invalid user ID format
				DepartmentId: 1,
			}
			
			resp, err := grpcHandler.CreateDepartmentManager(ctx, req)
			
			// Should never return a gRPC error
			if err != nil {
				return false
			}
			
			// Should return validation error for invalid user ID format
			return resp.Error != "" && strings.Contains(resp.Error, "invalid user_id format")
		},
	))

	// Property: RemoveDepartmentManager validates manager ID
	properties.Property("RemoveDepartmentManager validates manager ID", prop.ForAll(
		func() bool {
			ctx := context.Background()
			req := &structurepb.RemoveDepartmentManagerRequest{
				ManagerId: 0, // Invalid ID
			}
			
			resp, err := grpcHandler.RemoveDepartmentManager(ctx, req)
			
			// Should never return a gRPC error
			if err != nil {
				return false
			}
			
			// Should return error for invalid manager ID
			return !resp.Success && resp.Error != "" && strings.Contains(resp.Error, "not found")
		},
	))

	// Property: LinkGroupToChat validates group ID
	properties.Property("LinkGroupToChat validates group ID", prop.ForAll(
		func() bool {
			ctx := context.Background()
			req := &structurepb.LinkGroupToChatRequest{
				GroupId: 0, // Invalid ID
				ChatId:  1,
			}
			
			resp, err := grpcHandler.LinkGroupToChat(ctx, req)
			
			// Should never return a gRPC error
			if err != nil {
				return false
			}
			
			// Should return error for invalid group ID
			return !resp.Success && resp.Error != "" && strings.Contains(resp.Error, "not found")
		},
	))

	// Property: All gRPC methods are callable without panicking
	properties.Property("All gRPC methods are callable", prop.ForAll(
		func() bool {
			ctx := context.Background()
			
			// Test that all methods can be called without panicking
			methods := []func() bool{
				func() bool {
					_, err := grpcHandler.Health(ctx, &structurepb.HealthRequest{})
					return err == nil
				},
				func() bool {
					_, err := grpcHandler.GetAllUniversities(ctx, &structurepb.GetAllUniversitiesRequest{})
					return err == nil
				},
				func() bool {
					_, err := grpcHandler.GetUniversityByID(ctx, &structurepb.GetUniversityByIDRequest{Id: 1})
					return err == nil
				},
				func() bool {
					_, err := grpcHandler.GetAllDepartmentManagers(ctx, &structurepb.GetAllDepartmentManagersRequest{})
					return err == nil
				},
			}
			
			for _, method := range methods {
				if !method() {
					return false
				}
			}
			
			return true
		},
	))

	// Run all properties with 100 iterations each
	properties.TestingRun(t, gopter.ConsoleReporter(false))
}